# octofs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  README.md  SECURITY.md  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
src/mcp/: hint_accumulator.rs  mod.rs  server.rs  shared_utils.rs
src/mcp/fs/: ast_grep.rs  core.rs  directory.rs  file_ops.rs  fs_tests.rs  functions.rs  mod.rs  search.rs  shell.rs  text_editing.rs  workdir.rs
src/utils/: glob.rs  line_hash.rs  mod.rs  truncation.rs
