[package]
name = "octofs"
version = "0.2.1"
edition = "2021"
authors = ["Muvon Un Limited <contact@muvon.io>"]
license = "Apache-2.0"
description = "Standalone MCP filesystem tools server — view, edit, shell, ast-grep, workdir"
homepage = "https://github.com/muvon/octofs"
repository = "https://github.com/muvon/octofs"
documentation = "https://github.com/muvon/octofs"
keywords = ["mcp", "model-context-protocol", "ai", "ai-agents", "llm", "filesystem", "cli", "rust", "developer-tools", "cursor", "claude", "code-analysis", "ast-grep", "shell", "productivity"]
categories = ["development-tools", "command-line-utilities", "filesystem"]
readme = "README.md"
rust-version = "1.92"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "install.sh"
]

[[bin]]
name = "octofs"
path = "src/main.rs"

# Enable static linking
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "signal", "io-std", "io-util", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
ignore = "0.4.25"
glob = "0.3.3"
regex = "1.12.2"
tracing = { version = "0.1", features = ["std"] }
clap = { version = "4.5.56", features = ["derive"] }

# MCP SDK
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = { version = "0.7", features = ["codec"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.3.1"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true
rpath = false
